@@ -1,4 +1,8 @@
 release 1.3 (06-2010)
+- Guice integration supports the @Inject binding of common
+  JAX-RS and Jersey dependencies such as UriInfo and ExtendedUriInfo.
+  Extend from com.sun.jersey.guice.JerseyServletModule, instead of
+  com.google.inject.servlet.ServletModule, to register these bindings.
 - GlassFish v3 integration
   Instead of one big uber JAR, jersey-gf-bundle.jar, individual Jersey modules 
   are integrated to GlassFish to allow better modularization
